--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -7,7 +7,7 @@ function hideAlerts() {
 }
 setTimeout(hideAlerts, 5000);
 
-$("#r1playbutton").click(function () {
+$(".r1playbutton").click(function () {
   $("#r1play").show();
   $("#r2play").hide();
   $("#r3play").hide();
@@ -17,7 +17,7 @@ $("#r1playbutton").click(function () {
   $("#r7play").hide();
   $("#r8play").hide();
 });
-$("#r2playbutton").click(function () {
+$(".r2playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").show();
   $("#r3play").hide();
@@ -27,7 +27,7 @@ $("#r2playbutton").click(function () {
   $("#r7play").hide();
   $("#r8play").hide();
 });
-$("#r3playbutton").click(function () {
+$(".r3playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").hide();
   $("#r3play").show();
@@ -37,7 +37,7 @@ $("#r3playbutton").click(function () {
   $("#r7play").hide();
   $("#r8play").hide();
 });
-$("#r4playbutton").click(function () {
+$(".r4playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").hide();
   $("#r3play").hide();
@@ -47,7 +47,7 @@ $("#r4playbutton").click(function () {
   $("#r7play").hide();
   $("#r8play").hide();
 });
-$("#r5playbutton").click(function () {
+$(".r5playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").hide();
   $("#r3play").hide();
@@ -57,7 +57,7 @@ $("#r5playbutton").click(function () {
   $("#r7play").hide();
   $("#r8play").hide();
 });
-$("#r6playbutton").click(function () {
+$(".r6playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").hide();
   $("#r3play").hide();
@@ -67,7 +67,7 @@ $("#r6playbutton").click(function () {
   $("#r7play").hide();
   $("#r8play").hide();
 });
-$("#r7playbutton").click(function () {
+$(".r7playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").hide();
   $("#r3play").hide();
@@ -77,7 +77,7 @@ $("#r7playbutton").click(function () {
   $("#r7play").show();
   $("#r8play").hide();
 });
-$("#r8playbutton").click(function () {
+$(".r8playbutton").click(function () {
   $("#r1play").hide();
   $("#r2play").hide();
   $("#r3play").hide();
@@ -104,10 +104,16 @@ $("#r3answerform").submit(function() {
   return acroValidate(letters, "#r3answered", "r3answerform", "r3answerfield");
 });
 
+$("#r4answerformshortgame").submit(function() {
+  var letters = $("#round4letters").text()
+  return acroValidate(letters, "#r4answeredshortgame", "r4answerform", "r4answerfield");
+});
+
 $("#r4answerform").submit(function() {
   var letters = $("#round4letters").text()
   return acroValidate(letters, "#r4answered", "r4answerform", "r4answerfield");
 });
+
 $("#r5answerform").submit(function() {
   var letters = $("#round5letters").text()
   return acroValidate(letters, "#r5answered", "r5answerform", "r5answerfield");
