--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -7,6 +7,11 @@ function hideAlerts() {
 }
 setTimeout(hideAlerts, 5000);
 
+function refreshTimeRemaining() {
+  var pathname = window.location.pathname;
+  $(".timeremaining").load(pathname + " .timeremaining");
+}
+
 function removeButtonAnims() {
   $(".r1playbutton").removeClass("animated flip");
   $(".r2playbutton").removeClass("animated flip");
@@ -16,6 +21,7 @@ function removeButtonAnims() {
   $(".r6playbutton").removeClass("animated flip");
   $(".r7playbutton").removeClass("animated flip");
   $(".r8playbutton").removeClass("animated flip");
+  $(".allanswered").removeClass("animated bounce");
 }
 
 $(".r1playbutton").click(function () {
@@ -28,6 +34,7 @@ $(".r1playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").hide();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r2playbutton").click(function () {
   removeButtonAnims();
@@ -39,6 +46,7 @@ $(".r2playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").hide();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r3playbutton").click(function () {
   removeButtonAnims();
@@ -50,6 +58,7 @@ $(".r3playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").hide();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r4playbutton").click(function () {
   removeButtonAnims();
@@ -61,6 +70,7 @@ $(".r4playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").hide();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r5playbutton").click(function () {
   removeButtonAnims();
@@ -72,6 +82,7 @@ $(".r5playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").hide();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r6playbutton").click(function () {
   removeButtonAnims();
@@ -83,6 +94,7 @@ $(".r6playbutton").click(function () {
   $("#r6play").show();
   $("#r7play").hide();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r7playbutton").click(function () {
   removeButtonAnims();
@@ -94,6 +106,7 @@ $(".r7playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").show();
   $("#r8play").hide();
+  refreshTimeRemaining();
 });
 $(".r8playbutton").click(function () {
   removeButtonAnims();
@@ -105,6 +118,7 @@ $(".r8playbutton").click(function () {
   $("#r6play").hide();
   $("#r7play").hide();
   $("#r8play").show();
+  refreshTimeRemaining();
 });
 
 // validation
@@ -124,11 +138,13 @@ $("#r3answerform").submit(function() {
 });
 
 $("#r4answerformshortgame").submit(function() {
+  refreshTimeRemaining();
   var letters = $("#round4letters").text()
   return acroValidate(letters, "#r4answeredshortgame", "r4answerform", "r4answerfield");
 });
 
 $("#r4answerform").submit(function() {
+  refreshTimeRemaining();
   var letters = $("#round4letters").text()
   return acroValidate(letters, "#r4answered", "r4answerform", "r4answerfield");
 });
@@ -149,6 +165,7 @@ $("#r7answerform").submit(function() {
 });
 
 $("#r8answerform").submit(function() {
+  refreshTimeRemaining();
   var letters = $("#round8letters").text()
   return acroValidate(letters, "#r8answered", "r8answerform", "r8answerfield");
 });
