--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -176,6 +176,6 @@
           <%= button_tag "Play Round 4", :class => "r4playbutton" %>
       </div>
     </div>
-    Time left to play: <%= @timeremaining %>.<br>
+    <span class="timeremaining">Time left to play: <%= @timeremaining %>.<br></span>
     # of players: <%= @game.playercount %>/12
   </div>
